--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
             <div class="content">
                 Fale conosco através do 0800 642 2233 / Estamos localizados na Avenida das Araras N 2123 - Bolicho dos Macaco
                 <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14447.34913954035!2d55.1852468!3d25.1411914!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e5f6a576414cf2d%3A0xb3da71b879f0e038!2sBurj%20Al%20Arab!5e0!3m2!1spt-BR!2sbr!4v1687640011801!5m2!1spt-BR!2sbr" width="400" height="175" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                <form id="formulario" method="get" onsubmit="">
+                <form id="formulario" method="post" onsubmit="">
                     <label>Nome</label><input name="text"><br>
                     <label>E-mail</label><input e-mail="e-mail"><br>
                     <label>Assunto</label><input assunto="text"><br>
